Very minor change, just adding a bit of space below the rare species lists for increased readability, and to make sure collapse always works in the proper direction

--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,11 @@
 
 
 /* Styling the rare species results containers */
+
+#rare-species {
+    padding-bottom: 10vw;
+}
+
 .result-cols {
     display: none; /* Hiding the results columns until the user presses the button */
     border: 1px solid rgba(0,0,0,0.2);
